--- a/electra1131/app/pt-BR.lproj/Main.strings
+++ b/electra1131/app/pt-BR.lproj/Main.strings
@@ -1,6 +1,6 @@
 
 /* Class = "UILabel"; text = "Brought to you by the "; ObjectID = "1fC-j2-0wp"; */
-"1fC-j2-0wp.text" = "Feito para você por ";
+"1fC-j2-0wp.text" = "Feito para você por";
 
 /* Class = "UILabel"; text = "Tweaks"; ObjectID = "4H6-RC-SIx"; */
 "4H6-RC-SIx.text" = "Tweaks";
@@ -9,7 +9,7 @@
 "Ll4-6Q-Yds.normalTitle" = "Definir Nonce";
 
 /* Class = "UIButton"; normalTitle = "Credits"; ObjectID = "NcJ-fY-tUf"; */
-"NcJ-fY-tUf.normalTitle" = "Creditos";
+"NcJ-fY-tUf.normalTitle" = "Créditos";
 
 /* Class = "UIButton"; normalTitle = "@Electra_Team"; ObjectID = "ZJY-zs-sEX"; */
 "ZJY-zs-sEX.normalTitle" = "@Electra_Team";
