Fixes to pt-BR language after test on device

--- a/electra1131/app/pt-BR.lproj/Main.strings
+++ b/electra1131/app/pt-BR.lproj/Main.strings
@@ -1,6 +1,6 @@
 
 /* Class = "UILabel"; text = "Brought to you by the "; ObjectID = "1fC-j2-0wp"; */
-"1fC-j2-0wp.text" = "Feito para você por";
+"1fC-j2-0wp.text" = "Feito para você por: ";
 
 /* Class = "UILabel"; text = "Tweaks"; ObjectID = "4H6-RC-SIx"; */
 "4H6-RC-SIx.text" = "Tweaks";
