--- a/electra1131/pt-BR.lproj/Localizable.strings
+++ b/electra1131/pt-BR.lproj/Localizable.strings
@@ -19,7 +19,7 @@
 "OK" = "OK";
 "Share Electra" = "Compartilhar Electra";
 "Please Wait (1/3)" = "Aguarde (1/3)";
-"Waiting: %d seconds" = "Aguarde: %d Segundos";
+"Waiting: %d seconds" = "Aguarde: %d Seg's";
 "Please Wait (2/3)" = "Aguarde (2/3)";
 "Error: exploit" = "Erro: Exploit";
 "Error: unsupported" = "Erro: Não Suportado";
