--- a/electra1131/ar.lproj/Localizable.strings
+++ b/electra1131/ar.lproj/Localizable.strings
@@ -6,46 +6,46 @@
   Copyright © 2018 Electra Team. All rights reserved.
 */
 
-"Update Available!" = "تحديث متوفر!";
+"Update Available!" = "!تحديث متوفر";
 "An update for Electra is available! Please visit %@ on a computer to download the latest IPA!" = "يوجد تحديث جديد لإلكترا! تفضل بزيارة %@ على الكمبيوتر لتنزيل احدث اصدار!";
 "Version Error" = "خطأ في الإصدار";
-"Error: offsets" = "Error: offsets";
+"Error: offsets" = "خطأ: offsets";
 "Enable Jailbreak" = "تفعيل الجلبريك";
 "Already Jailbroken" = "الجلبريك مفعل";
 "Compatible with" = "متوافق مع";
 "I am using the Electra Jailbreak Toolkit for iOS 11.2 - 11.3.1 by the @%@ to jailbreak my %@ on iOS %@! You can get it now at %@" = "انا استخدم جلبريك إلكترا للاصدار iOS 11.2 - 11.3.1 بواسطة @%@ لعمل جبريك %@ on iOS %@! يمكنك الحصول عليه الآن من %@";
 "Credits" = "المطورين";
-"Thanks to Ian Beer, theninjaprawn, stek29, Siguza, xerub, PyschoTea and Pwn20wnd.\n\nElectra includes the following software:\n\nAPFS snapshot workaround by SparkZheng and bxl1989\nAPFS snapshot persistence patch by Pwn20wnd and ur0\nliboffsetfinder64 & libimg4tool by tihmstar\nlibplist by libimobiledevice\namfid patch by theninjaprawn\njailbreakd & tweak injection by CoolStar\nunlocknvram & sandbox fixes by stek29" = "شكراً لكل من Ian Beer, theninjaprawn, stek29, Siguza, xerub, PyschoTea و Pwn20wnd.\n\nجلبريك إلكترا يتضمن :\n\nAPFS snapshot workaround by SparkZheng and bxl1989\nAPFS snapshot persistence patch by Pwn20wnd and ur0\nliboffsetfinder64 & libimg4tool by tihmstar\nlibplist by libimobiledevice\namfid patch by theninjaprawn\njailbreakd & tweak injection by CoolStar\nunlocknvram & sandbox fixes by stek29";
+"Thanks to Ian Beer, theninjaprawn, stek29, Siguza, xerub, PsychoTea and Pwn20wnd.\n\nElectra includes the following software:\n\nAPFS snapshot workaround by SparkZheng and bxl1989\nAPFS snapshot persistence patch by Pwn20wnd and ur0\nliboffsetfinder64 & libimg4tool by tihmstar\nlibplist by libimobiledevice\namfid patch by theninjaprawn\njailbreakd & tweak injection by CoolStar\nunlocknvram & sandbox fixes by stek29" = "شكراً لكل من Ian Beer, theninjaprawn, stek29, Siguza, xerub, PsychoTea و Pwn20wnd.\n\nجلبريك إلكترا يتضمن :\n\nAPFS snapshot workaround by SparkZheng and bxl1989\nAPFS snapshot persistence patch by Pwn20wnd and ur0\nliboffsetfinder64 & libimg4tool by tihmstar\nlibplist by libimobiledevice\namfid patch by theninjaprawn\njailbreakd & tweak injection by CoolStar\nunlocknvram & sandbox fixes by stek29";
 "OK" = "موافق";
 "Share Electra" = "مشاركة";
 "Please Wait (1/3)" = "فضلا إنتظر (1/3)";
 "Waiting: %d seconds" = "إنتظر: %d ثواني";
 "Please Wait (2/3)" = "فضلا إنتظر (2/3)";
-"Error: exploit" = "خطاء: exploit";
-"Error: unsupported" = "خطاء: unsupported";
-"Error Exploiting" = "خطاء Exploiting";
+"Error: exploit" = "خطأ: exploit";
+"Error: unsupported" = "خطأ: unsupported";
+"Error Exploiting" = "خطأ Exploiting";
 "Jailbroken" = "جلبريك";
 "OpenSSH Running" = "مفعل OpenSSH";
 "OpenSSH is now running! Enjoy." = "OpenSSH الان يعمل.";
-"Error: tfp0" = "خطاء: tfp0";
+"Error: tfp0" = "خطأ: tfp0";
 "Already Jailbroken" = "الجلبريك مفعل";
-"Error: amfid patch" = "خطاء: amfid patch";
-"Error: rootfs remount" = "خطاء: rootfs remount";
-"Error: snapshot failed" = "خطاء: snapshot failed";
-"Error: conflict" = "خطاء: conflict";
-"Error Jailbreaking" = "خطاء في الجلبريك";
+"Error: amfid patch" = "خطأ: amfid patch";
+"Error: rootfs remount" = "خطأ: rootfs remount";
+"Error: snapshot failed" = "خطأ: snapshot failed";
+"Error: conflict" = "خطأ: conflict";
+"Error Jailbreaking" = "خطأ في الجلبريك";
 "Set the system boot nonce on jailbreak" = "تعيين كود عند تشغيل الجهاز";
 "Enter the generator for the nonce you want the system to generate on boot" = "أدخل الكود الذي تريد أن يقوم النظام بتوليده عند الإقلاع";
 "Cancel" = "إلغاء";
 "Set" = "ضبط";
-"Error" = "خطاء";
+"Error" = "خطأ";
 "Failed to validate generator" = "فشل التحقق من المولد";
 "Notice" = "ملاحظة";
 "The system boot nonce will be set the next time you enable your jailbreak" = "سيتم تعيين nonce التمهيد النظام في المرة التالية التي تقوم فيها بتمكين الجلبريك";
 "The system boot nonce will be set once you enable the jailbreak" = "سيتم تعيين nonce التمهيد النظام بمجرد تمكين الجلبريك";
 "Removing liberiOS" = "Removing liberiOS";
 "Installing Cydia" = "تثبيت السيديا";
-"Restarting" = "تحديث";
+"Restarting" = "Restarting تحديث";
 "APFS Snapshot Created" = "APFS Snapshot Created";
 "An APFS Snapshot has been successfully created! You may be able to use SemiRestore to restore your phone to this snapshot in the future." = "An APFS Snapshot has been successfully created! You may be able to use SemiRestore to restore your phone to this snapshot in the future.";
 "Continue Jailbreak" = "توصيل الجلبريك";
